src/test/ui/feature-gates/feature-gate-c_ffi_pure.stderr
error[E0658]: the `#[c_ffi_pure]` attribute is an experimental feature (see issue #58329)
  --> $DIR/feature-gate-c_ffi_pure.rs:5:5
   |
LL |     #[c_ffi_pure] //~ ERROR the `#[c_ffi_pure]` attribute is an experimental feature (see issue #58329)
   |     ^^^^^^^^^^^^^
   |
   = help: add #![feature(c_ffi_pure)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
